--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <section>
+        <h1 style="text-align:center">A simple Calculator made with Javascript</h1>
         <div class="container">
             <div id="display"></div>
             <div class="buttons">
@@ -33,12 +34,20 @@
                 <div class="button">)</div>
                 <div class="button" id="equal">=</div>
             </div>
-            
+        </div>
+        <div class="source">
+            <h3>Get the source code from github .</h3>
+            <a href="https://github.com/amazingasad/simple-calculator" target="_blank"><img src="icons/Github.svg" alt="Github Icon"></a>
         </div>
     </section>
-
-
-
+    <footer>
+        <h1>Follow me on</h1>
+        <a href="https://in-asad.com/facebook" target="_blank"><img src="icons/Facebook.svg" alt="Facebook Icon"></a>
+        <a href="https://in-asad.com/instagram" target="_blank"><img src="icons/Instagram.svg" alt="Instagram Icon"></a>
+        <a href="https://in-asad.com/youtube" target="_blank"><img src="icons/Youtube.svg" alt="Youtube Icon"></a>
+        <a href="https://in-asad.com/twitter" target="_blank"><img src="icons/Twitter.svg" alt="Twitter Icon"></a>
+        <a href="https://in-asad.com/github" target="_blank"><img src="icons/Github.svg" alt="Github Icon"></a>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
